Fixed: word spacing in menu items

--- a/src/sass/navbar-desk.scss
+++ b/src/sass/navbar-desk.scss
@@ -51,6 +51,7 @@
       a {
         text-decoration: none;
         text-transform: uppercase;
+        word-spacing: 3px;
         color: var(--navbar-item-color);
         &:hover {
           text-decoration: underline;
@@ -103,6 +104,7 @@
               .item-name {
                 & > a {
                   text-transform: uppercase;
+                  word-spacing: 3px;
                   font-size: 16px;
                   color: #fff;
                 }
